--- a/public/mcapp/DashboardHome.html
+++ b/public/mcapp/DashboardHome.html
@@ -41,19 +41,18 @@
                                     <div class="slds-combobox_container">
                                         <div class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
                                             aria-expanded="false" aria-haspopup="listbox" role="combobox">
-                                            <div
-                                                class="slds-form-element slds-p-top--medium slds-p-horizontal--medium slds-m-bottom--small">
-                                                    <div class="slds-form-element__control slds-input-has-icon slds-input-has-icon_right">
-                                                        <input id="lookup" class="slds-input" type="text"
+                                            <div class="slds-form-element slds-p-top--medium slds-p-horizontal--medium slds-m-bottom--small">
+                                                <div class="slds-form-element__control slds-input-has-icon slds-input-has-icon_right">
+                                                    <input id="lookup" class="slds-input" type="text"
                                                         aria-haspopup="true" aria-autocomplete="listbox" role="combobox"
                                                         aria-activedescendant="" />                                                          
-                                                        <button class="slds-button slds-button_icon slds-input__icon slds-input__icon_right" onclick="filter()" title="Clear">
-                                                          <svg class="slds-icon slds-input__icon slds-input__icon_left slds-icon-text-default" aria-hidden="true">
-                                                              <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"></use>
-                                                          </svg>
-                                                          <span class="slds-assistive-text">Clear</span>
-                                                        </button>
-                                                    </div>
+                                                    <button class="slds-button slds-button_icon slds-input__icon slds-input__icon_right" onclick="filter()" title="Search">
+                                                        <svg class="slds-icon slds-icon slds-icon_x-small slds-icon-text-default"
+                                                            aria-hidden="true">
+                                                            <use xlink:href="/mcapp/images/symbols.svg#search">
+                                                            </use>
+                                                        </svg>
+                                                    </button>
                                                 </div>
                                             </div>                                          
                                         </div>
