--- a/public/mcapp/DashboardHome.html
+++ b/public/mcapp/DashboardHome.html
@@ -43,7 +43,7 @@
                                             aria-expanded="false" aria-haspopup="listbox" role="combobox">
                                             <div class="slds-form-element slds-p-top--medium slds-p-horizontal--medium slds-m-bottom--small">
                                                 <div class="slds-form-element__control slds-input-has-icon slds-input-has-icon_right">
-                                                    <input id="lookup" class="slds-input" type="text"
+                                                    <input id="lookup" onkeyup="filter()" class="slds-input" type="text"
                                                         aria-haspopup="true" aria-autocomplete="listbox" role="combobox"
                                                         aria-activedescendant="" />                                                          
                                                     <button class="slds-button slds-button_icon slds-input__icon slds-input__icon_right" onclick="loadDashboards(false, 'filtered', 1)" title="Search">
@@ -80,5 +80,15 @@
     <input type="hidden" id="rt" name="rt" value="">
     <input type="hidden" id="eid" name="eid" value="">
     <input type="hidden" id="currentDashboard" name="currentDashboard" value="">
+    <script>
+        function filter() {
+            inp = $('#lookup').val();
+            console.log(inp);
+
+            if(inp == undefined) {
+                loadDashboards(false, "init", 1);
+            }
+        }
+    </script>
 </body>
 </html>
