--- a/public/mcapp/DashboardHome.html
+++ b/public/mcapp/DashboardHome.html
@@ -83,7 +83,7 @@
     <script>
         function filter() {
             inp = $('#lookup').val();
-            if(inp == undefined) {
+            if(inp == '') {
                 loadDashboards(false, "init", 1);
             }
         }
