--- a/public/mcapp/DashboardHome.html
+++ b/public/mcapp/DashboardHome.html
@@ -84,7 +84,7 @@
         function filter() {
             inp = $('#lookup').val();
             if(inp == '') {
-                loadDashboards(false, "init", 1);
+                loadDashboards(false, 'filtered', 1);
             }
         }
     </script>
