--- a/public/mcapp/htmlEmailsDashboard.html
+++ b/public/mcapp/htmlEmailsDashboard.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/mcapp/css/styles.css">
     <script type="text/javascript" src="/mcapp/js/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twbs-pagination/1.4.2/jquery.twbsPagination.min.js"></script>
-    <script type="text/javascript" src="/mcapp/js/sampleCallsbackend.js"></script>
+    <script type="text/javascript" src="/mcapp/js/htmlemailsDashborad.js"></script>
 </head>
 
 <body>
@@ -26,8 +26,12 @@
     <div class="slds-tabs_default">
         <ul class="slds-tabs_default__nav" role="tablist">
             <li class="slds-tabs_default__item slds-is-active" title="Item One" role="presentation">
-                <a class="slds-tabs_default__link" href="javascript:void(0);" role="tab" tabindex="0"
+                <a class="slds-tabs_default__link" href="/Dashboard/home" role="tab" tabindex="0"
                     aria-selected="true" aria-controls="tab-default-1" id="tab-default-1__item">DASHBOARD</a>
+            </li>
+            <li class="slds-tabs_default__item slds-is-active" title="Item One" role="presentation">
+                <a class="slds-tabs_default__link" href="/htmlemails/home" role="tab" tabindex="0"
+                    aria-selected="true" aria-controls="tab-default-1" id="tab-default-1__item">HTML Emails</a>
             </li>
         </ul>
         <div id="tab-default-1" class="slds-tabs_default__content slds-show" role="tabpanel"
