--- a/public/mcapp/DashboardHome.html
+++ b/public/mcapp/DashboardHome.html
@@ -26,7 +26,7 @@
     <div class="slds-tabs_default">
         <ul class="slds-tabs_default__nav" role="tablist">
             <li class="slds-tabs_default__item slds-is-active" title="Item One" role="presentation">
-                <a class="slds-tabs_default__link" href="/Dashboard/home" role="tab" tabindex="0"
+                <a id="DashboardLink"class="slds-tabs_default__link" href="/Dashboard/home" role="tab" tabindex="0"
                     aria-selected="true" aria-controls="tab-default-1" id="tab-default-1__item">DASHBOARD</a>
             </li>
             <li class="slds-tabs_default__item slds-is-active" title="Item One" role="presentation">
