changed function name

--- a/public/mcapp/htmlEmailsDashboard.html
+++ b/public/mcapp/htmlEmailsDashboard.html
@@ -85,7 +85,7 @@
         function filter() {
             inp = $('#lookup').val();
             if(inp == '') {
-                loadDashboards(false, 'filtered', 1);
+                loadHtmlEmails(false, 'filtered', 1);
             }
         }
     </script>
