ready function removed

--- a/public/mcapp/DashboardHome.html
+++ b/public/mcapp/DashboardHome.html
@@ -29,7 +29,7 @@
                 <a id="DashboardLink"class="slds-tabs_default__link" href="/Dashboard/home" role="tab" tabindex="0"
                     aria-selected="true" aria-controls="tab-default-1" id="tab-default-1__item">DASHBOARD</a>
             </li>
-            <li class="slds-tabs_default__item slds-is-active" title="Item One" role="presentation">
+            <li class="slds-tabs_default__item" title="Item One" role="presentation">
                 <a id="htmlemailsLink" class="slds-tabs_default__link" href="/htmlemails/home?rt=$('#rt').val()" role="tab" tabindex="0"
                     aria-selected="true" aria-controls="tab-default-1" id="tab-default-1__item">HTML Emails</a>
             </li>
