--- a/public/mcapp/htmlEmailsDashboard.html
+++ b/public/mcapp/htmlEmailsDashboard.html
@@ -25,7 +25,7 @@
     </div>
     <div class="slds-tabs_default">
         <ul class="slds-tabs_default__nav" role="tablist">
-            <li class="slds-tabs_default__item slds-is-active" title="Item One" role="presentation">
+            <li class="slds-tabs_default__item" title="Item One" role="presentation">
                 <a id="DashboardLink"class="slds-tabs_default__link" href="/Dashboard/home" role="tab" tabindex="0"
                     aria-selected="true" aria-controls="tab-default-1" id="tab-default-1__item">DASHBOARD</a>
             </li>
