--- a/public/mcapp/DashboardHome.html
+++ b/public/mcapp/DashboardHome.html
@@ -27,11 +27,11 @@
         <ul class="slds-tabs_default__nav" role="tablist">
             <li class="slds-tabs_default__item slds-is-active" title="Item One" role="presentation">
                 <a id="DashboardLink"class="slds-tabs_default__link" href="/Dashboard/home" role="tab" tabindex="0"
-                    aria-selected="true" aria-controls="tab-default-1" id="tab-default-1__item">DASHBOARD</a>
+                    aria-selected="true" aria-controls="tab-default-1" id="tab-default-1__item">Dashboard</a>
             </li>
             <li class="slds-tabs_default__item" title="Item One" role="presentation">
                 <a id="htmlemailsLink" class="slds-tabs_default__link" href="/htmlemails/home?rt=$('#rt').val()" role="tab" tabindex="0"
-                    aria-selected="true" aria-controls="tab-default-1" id="tab-default-1__item">HTML Emails</a>
+                    aria-selected="true" aria-controls="tab-default-1" id="tab-default-1__item">Emails</a>
             </li>
         </ul>
         <div id="tab-default-1" class="slds-tabs_default__content slds-show" role="tabpanel"
