--- a/public/mcapp/htmlEmailsDashboard.html
+++ b/public/mcapp/htmlEmailsDashboard.html
@@ -17,6 +17,24 @@
     <script type="text/javascript" src="/mcapp/js/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twbs-pagination/1.4.2/jquery.twbsPagination.min.js"></script>
     <script type="text/javascript" src="/mcapp/js/htmlemailsDashborad.js"></script>
+    <style>
+        #assignLinks {
+            background-color: white;
+        }
+        #content {
+            float: left;
+            width: 320px;
+            background-color: white;
+        }
+        #sidebar {
+            float: right;
+            width: 320px;
+            background-color: white;
+        }
+        #cleared {
+            clear: both;
+        }
+    </style>
 </head>
 
 <body>
