--- a/public/mcapp/htmlEmailsDashboard.html
+++ b/public/mcapp/htmlEmailsDashboard.html
@@ -105,14 +105,14 @@
                 <span><b>Preheader: </b>preheader</span>
             </header>
             <div id="content">
-              <label class="slds-form-element__label" for="select-01" style="padding-left: 1rem;">Select Links from the Email</label>
-              <article class="slds-card">
+              <label class="slds-form-element__label" for="select-01" style="padding-left: 1rem;padding-top: 1rem;">Select Links from the Email</label>
+              <article>
                 <div class="slds-card__header slds-grid">
                   <header class="slds-media slds-media_center slds-has-flexi-truncate">
                     <div class="slds-media__body">
                       <h2 class="slds-card__header-title">
                         <a href="javascript:void(0);" class="slds-card__header-link slds-truncate" title="Card Header">
-                          <span>Unsubscribe</span><br>
+                          <span><b>Unsubscribe</b></span><br>
                           <span style="font-size: 12px;font-weight: normal;">www.preferencecentre.com</span><br>
                         </a>
                       </h2>
@@ -132,13 +132,13 @@
               </article>
               <div style="border-top:2px solid lightgray;margin: 0px 40px 0px 40px;">
               </div>
-              <article class="slds-card">
+              <article>
                 <div class="slds-card__header slds-grid">
                   <header class="slds-media slds-media_center slds-has-flexi-truncate">
                     <div class="slds-media__body">
                       <h2 class="slds-card__header-title">
                         <a href="javascript:void(0);" class="slds-card__header-link slds-truncate" title="Card Header">
-                          <span>Facebook</span><br>
+                          <span><b>Facebook</b></span><br>
                           <span style="font-size: 12px;font-weight: normal;">www.facebook.com</span><br>
                         </a>
                       </h2>
@@ -158,8 +158,8 @@
               </article>
             </div>
             <div id="sidebar">
-              <label class="slds-form-element__label" for="select-01">Select OneLink Link</label>
-              <article class="slds-card">
+              <label class="slds-form-element__label" for="select-01" style="padding-top: 1rem;">Select OneLink Link</label>
+              <article>
                 <div class="slds-card__header slds-grid" style="width: 100%; padding-left:0px !important;">
                   <header class="slds-media slds-media_center" style="width: 100%;">
                     <div class="slds-select_container" style="width: 100%;">
