--- a/public/button/index.html
+++ b/public/button/index.html
@@ -5,7 +5,7 @@
   <title>AppsFlyer - Button Content Block</title>
   <link rel="stylesheet"
         href="/button/css/salesforce-lightning-design-system/assets/styles/salesforce-lightning-design-system.min.css">
-  <script src="/button/js/jquery.min.js"></script>
+  <script src="/button/js/jquery-3.5.1.min.js"></script>
 
   <script src="/button/js/jscolor.js"></script>
 </head>
