--- a/public/image/index.html
+++ b/public/image/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet"
   href="/image/css/salesforce-lightning-design-system/assets/styles/salesforce-lightning-design-system.min.css">
 
-  <script src="/image/js/jquery.min.js"></script>
+  <script src="/image/js/jquery-3.5.1.min.js"></script>
   <script src="/image/js/script.js"></script>
 </head>
 
