--- a/public/mcapp/DashboardHome.html
+++ b/public/mcapp/DashboardHome.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet"
         href="/mcapp/css/salesforce-lightning-design-system/assets/styles/salesforce-lightning-design-system.min.css">
     <link rel="stylesheet" href="/mcapp/css/styles.css">
-    <script type="text/javascript" src="/mcapp/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/mcapp/js/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twbs-pagination/1.4.2/jquery.twbsPagination.min.js"></script>
     <script type="text/javascript" src="/mcapp/js/dashboard.js"></script>
 </head>
