--- a/public/mcapp/Edit.html
+++ b/public/mcapp/Edit.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet"
     href="/mcapp/css/salesforce-lightning-design-system/assets/styles/salesforce-lightning-design-system.min.css">
     <link href="/mcapp/css/create-style.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="/mcapp/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/mcapp/js/jquery-3.5.1.min.js"></script>
     <style>
         ::-webkit-input-placeholder {
             /* Chrome/Opera/Safari */
